<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_my_skills"
            android:icon="@drawable/outline_psychology_24"
            android:title="@string/nav_my_skills" />

        <item
            android:id="@+id/nav_my_trades"
            android:icon="@drawable/outline_handshake_24"
            android:title="@string/nav_my_trades" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/baseline_message_24"
            android:title="@string/nav_messages" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/outline_notifications_24"
            android:title="@string/nav_notifications" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/nav_favorites" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/outline_history_24"
            android:title="@string/nav_history" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_settings_24"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/outline_help_24"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/outline_info_24"
            android:title="@string/nav_about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/outline_logout_24"
            android:title="@string/nav_logout" />
    </group>

</menu>